--- a/SmartOrder/SmartOrder/Cart/Cart.storyboard
+++ b/SmartOrder/SmartOrder/Cart/Cart.storyboard
@@ -43,17 +43,6 @@
                                             <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="checked30" translatesAutoresizingMaskIntoConstraints="NO" id="JCc-Mw-sOD">
-                                            <rect key="frame" x="12" y="28" width="43" height="54"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cuD-wm-Iko">
-                                            <rect key="frame" x="11" y="33" width="45" height="45"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <connections>
-                                                <action selector="onClick:" destination="0VR-cQ-A0U" eventType="touchUpInside" id="oKA-6x-iPi"/>
-                                            </connections>
-                                        </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hIg-hy-1ad">
                                             <rect key="frame" x="145" y="48" width="177" height="15"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -68,6 +57,14 @@
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cuD-wm-Iko">
+                                            <rect key="frame" x="10" y="32" width="47" height="47"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <state key="normal" image="checked30"/>
+                                            <connections>
+                                                <action selector="onClick:" destination="0VR-cQ-A0U" eventType="touchUpInside" id="oKA-6x-iPi"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
@@ -76,7 +73,7 @@
                                     <outlet property="name" destination="Dna-d1-yyG" id="d51-Bu-67j"/>
                                     <outlet property="option" destination="hIg-hy-1ad" id="Kq6-qM-Ih0"/>
                                     <outlet property="price" destination="IhM-iH-qPk" id="gXX-XN-bsG"/>
-                                    <outlet property="select" destination="JCc-Mw-sOD" id="C2t-XY-oVl"/>
+                                    <outlet property="selectBox" destination="cuD-wm-Iko" id="Q6A-Qh-rZA"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
